# multi-agent-workflow-system

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  planner.py  planner_agent.py  research.py  research_agent.py  summarizer.py  summarizer_agent.py
backend/app/api/: routes.py  routes_workflows.py
backend/app/core/: config.py  errors.py  exceptions.py  logging.py  request_context.py
backend/app/db/: __init__.py  repository.py  session.py  sqlite.py
backend/app/orchestration/: __init__.py  orchestrator.py  workflow_orchestrator.py
backend/app/schemas/: __init__.py  workflow.py
backend/app/services/: __init__.py  llm.py  workflow_service.py
backend/tests/: conftest.py  test_agents.py  test_config.py  test_endpoints.py  test_health.py  test_orchestration.py  test_orchestrator.py  test_phase6_workflows.py  test_schema_validation.py  test_schemas.py  test_workflow_api.py
docs/: API_SPEC.md  ARCHITECTURE.md  PHASE_1_PLAN.md  PHASE_1_PLANNING.md  PHASE_2_ARCHITECTURE.md  PHASE_3_ENVIRONMENT_SETUP.md  PHASE_3_SETUP.md  PHASE_4_BACKEND.md  PHASE_5_FRONTEND.md  PHASE_6_TESTING.md  PHASE_7_DEPLOYMENT.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/components/: AgentOutputCard.tsx  AgentOutputPanel.tsx  FinalResultPanel.tsx  HistoryList.tsx  (+2 more)
scripts/: smoke_test.sh
(+5 files in other folders)
